# opencv-video-capture-tcp-display

./: README.md  WinsockMatTransmissionClient.cpp  WinsockMatTransmissionClient.h  WinsockMatTransmissionServer.h  client.cpp  test.h
linux/: CMakeLists.txt  WinsockMatTransmissionClient.cpp  WinsockMatTransmissionClient.h  WinsockMatTransmissionServer.cpp  WinsockMatTransmissionServer.h  client.cpp  opencv-video-capture-tcp-display.tar  server.cpp  test.cpp
win32/: WinsockMatTransmissionServer.cpp  server.cpp  test.cpp
